maybe fixed background on mobile

--- a/style.css
+++ b/style.css
@@ -48,6 +48,9 @@ html, body {
 .h3 {
 	font-size: 1.25rem;
 }
+body {
+  background-image: url(images/cloudmobile.png);
+}
 
 }
 
